--- a/wiki/SupportForTheTvDbCom.wiki
+++ b/wiki/SupportForTheTvDbCom.wiki
@@ -1,3 +1,4 @@
+#labels Featured,Phase-Deploy
 = Introduction =
 
 The goal:  To record with MediaPortal and be able to have the recordings easily and automatically be added to MyTvSeries plugin using the SxxExx (Season/Episode) information.
