--- a/wiki/Install.wiki
+++ b/wiki/Install.wiki
@@ -7,7 +7,7 @@ Simple outline of how to install the SD plugin
 
 = Details =
 
-  * Download the rar file from this site
+  * Download the rar or zip file from this site
   * rar is a compressed file... use winrar or 7zip to uncompress it
   * stop the MediaPortal TV Service
   * Copy both DLL files into the MediaPortal TV Server\Plugins directory
